--- a/css/add-product.css
+++ b/css/add-product.css
@@ -16,3 +16,27 @@ hr {
     padding: 2px;
     margin-bottom: 10px;
 }
+
+.popup-available {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.6);
+    z-index: 999;
+}
+
+.popup-show-available {
+    background-color: white;
+    width: 45vw;
+    height: auto;
+    margin: 0 auto;
+    margin-top: 2%;
+    overflow: auto;
+}
+
+.fa-times {
+    float: right;
+    position: fixed;
+    right: 28%;
+    color: red;
+}
