--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ html {
 #mainNav {
   min-height: 56px;
   background-color: #433535eb;
+  z-index: 2;
 }
 
 #mainNav .navbar-toggler {
@@ -42,7 +43,7 @@ html {
     padding-bottom: 0;
     border-bottom: none;
     background-color: transparent;
-    transition: background-color 0.3s ease-in-out;
+    transition: background-color 0.3s;
   }
   #mainNav .navbar-brand {
     padding: 0.5rem 0;
@@ -80,6 +81,7 @@ html {
     color: #e9ecef;
     outline: none;
     border-bottom: 0.25rem solid #e9ecef;
+    padding-bottom: 15px;
   }
 }
 
@@ -181,7 +183,7 @@ html {
 }
 
 .about-section p {
-  margin-bottom: 5rem;
+  margin-bottom: 10rem;
 }
 
 .products-section {
@@ -335,4 +337,62 @@ a:hover {
 
 footer {
   padding: 5rem 0;
+}
+
+.contact_card {
+  transition: transform 0.5s;
+}
+
+.contact_card:hover {
+  transform: scale(1.05, 1.05);
+}
+
+#authContainer {
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  z-index: 3;
+  display: none;
+}
+
+#authContainer > div:first-child {
+  height: 100%;
+  width: 100%;
+  background-color: black;
+  opacity: 0.6;
+}
+
+#authContainer > div:last-child {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  display: flex;
+  align-items: center;
+}
+
+#productsSection .card {
+  transition: transform 0.5s;
+}
+
+#productsSection .card:hover {
+  transform: scale(1.05);
+}
+
+#productsSection .card > img {
+  border-radius: 5px;
+}
+
+#productsSection .card > h3 {
+  color: #555 !important;
+  margin-top: 10px;
+}
+
+#productsSection .card-deck {
+  display: flex;
+  justify-content: center;
+}
+
+#productsSection .card-deck > a {
+  margin-bottom: 20px;
 }
